apps/goapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-stable
  namespace: production
  labels:
    app: goapp
spec:
  selector:
    app: goapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: goapp-canary
  namespace: production
  labels:
    app: goapp
spec:
  selector:
    app: goapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
