apps/goapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp
  namespace: production
spec:
  ingressClassName: nginx
  rules:
    - host: goapp.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goapp-stable
                port:
                  number: 8080
